--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
    <title>SAMSUNG INDIA</title>
  </head>
 <body>
-    <img src="logo.jpg" width="120" style="float:left" />
-    <h1>SAMSUNG SMARTPHONES</h1>
-    <h2>        World Best Smartphones</h2>
+    <img src="Ktmlogo.jpg" width="100" style="float:left" />
+    <h1>KTM INDIA</h1>
+    <h2>        World Best Bikes</h2>
     <img src="Samsung.webp"/> </br>
     <a href="visit.html">Visit Samsung Store</a>
     <h3>Best selling series</h3>
