--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <img src="Ktmlogo.jpg" width="100" style="float:left" />
     <h1>KTM INDIA</h1>
     <h2>        World Best Bikes</h2>
-    <img src="Samsung.webp"/> </br>
+    <img src="Rcmain.jpg"/> </br>
     <a href="visit.html">Visit Samsung Store</a>
     <h3>Best selling series</h3>
     1.A SERIES
