--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <h1>KTM INDIA</h1>
     <h2>        World Best Bikes</h2>
     <img src="Rcmain.jpg"/> </br>
-    <a href="visit.html">Visit Samsung Store</a>
+    <a href="visit.html">Discover</a>
     <h3>Best selling series</h3>
-    1.A SERIES
+    1.KTM DUKE
     <ol type="a">
-    <li> SAMSUNG A30</li>
-    <li>SAMSUNG A31</li>
-    <li>SAMSUNG A50</li>
-    <li>SAMSUNG A70</li>
+    <li> DUKE 125</li>
+    <li>DUKE 200</li>
+    <li>DUKE 250</li>
+    <li>DUKE 390</li>
     </ol>
-    2.S SERIES
+    2.KTM TC
     <ol type="a">
-    <li>SAMSUNG S10</li>
-    <li>SAMSUNG S10 PLUS</li>
-    <li>SAMSUNG S20</li>
-    <li>SAMSUNG S20 ULTRA</li>
+    <li>RC 125</li>
+    <li>RC 200</li>
+    <li>RC390</li>
+  
     </ol>
    <a href="upcoming.html">Upcoming Smartphones</a>
 
