--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <title>SAMSUNG INDIA</title>
  </head>
 <body>
-    <img src="Ktmlogo.jpg" width="100" style="float:left" />
+    <img src="Ktmlogo.jpg" width="140" style="float:left" />
     <h1>KTM INDIA</h1>
     <h2>        World Best Bikes</h2>
-    <img src="Rcmain.jpg"/> </br>
+    <img src="Rcmain.jpg" width="200"/> </br>
     <a href="visit.html">Discover</a>
     <h3>Best selling series</h3>
     1.KTM DUKE
@@ -25,7 +25,7 @@
     <li>RC390</li>
   
     </ol>
-   <a href="upcoming.html">Upcoming Smartphones</a>
+   <a href="upcoming.html">Upcoming Bikes</a>
 
 
    
