--- a/visit.html
+++ b/visit.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <title>Registration Form</title>
+   <title>KTM INDIA</title>
  </head>
 <body>
-    <h1>WELCOME TO SAMSUNG STORE</h1>
-    <img src="Store.jpg" width="70%" />
+    <h1>  KTM 390 ADVENTURE  </h1>
+    <h4> MORE ADVENTURE AWAITS YOU </h4>
+    <img src="Adv390.jpg" width="70%" />
     <h2>Service center in Kerala</h2>
     <ul>
     <li>kasaragod</li>
