--- a/visit.html
+++ b/visit.html
@@ -6,11 +6,11 @@
 <body>
     <h1>  KTM 390 ADVENTURE  </h1>
     <h4> MORE ADVENTURE AWAITS YOU </h4>
-    <img src="Adv390.jpg" width="70%" />
-    <h2>Service center in Kerala</h2>
+    <img src="Adv390.png" width="70%" />
+    <h2>showroomsin Kerala</h2>
     <ul>
     <li>kasaragod</li>
-    <li>kanhangad</li>
+   
     <li>Kannur</li>
     <li>Kozhikode</li>
     <li>Eranakulam</li>
