--- a/visit.html
+++ b/visit.html
@@ -6,7 +6,7 @@
 <body>
     <h1>  KTM 390 ADVENTURE  </h1>
     <h4> MORE ADVENTURE AWAITS YOU </h4>
-    <img src="Adv390.png" width="70%" />
+    <img src="Avd390.png" width="70%" />
     <h2>showroomsin Kerala</h2>
     <ul>
     <li>kasaragod</li>
