--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </tr>
 
     </table>
-    <a href="register.html">Register here to buy smartphones online 
+    <a href="register.html">Book now
 </a>
     
 </body>
