--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
    <!DOCTYPE html>
 <html>
  <head>
-   <title>SAMSUNG INDIA</title>
+   <title>KTM INDIA</title>
  </head>
 <body>
 
-    <h3><i><b>Price and details</b></i></h3>
+    <h3><i><b>Price and specifications</b></i></h3>
 
-    <table border="1" bordercolor="black" cellpadding="7" cellspacing="4" width="80%" bgcolor="#66ffff">
+    <table border="2" bordercolor="black" cellpadding="10" cellspacing="6" width="70%" bgcolor="#66ffff">
     <caption>Samsung M Series</caption>
     <tr>
     <th>MODEL</th>
