--- a/index.html
+++ b/index.html
@@ -38,42 +38,42 @@
 
     <h3><i><b>Price and specifications</b></i></h3>
 
-    <table border="2" bordercolor="black" cellpadding="10" cellspacing="6" width="70%" bgcolor="#66ffff">
-    <caption>Samsung M Series</caption>
+    <table border="2" bordercolor="black" cellpadding="10" cellspacing="6" width="60%" bgcolor="yellow">
+    <caption>KTM BIKES</caption>
     <tr>
     <th>MODEL</th>
-    <th>RAM</th>
-    <th>STORAGE</th>
+    <th>Max power</th>
+    <th>Mileage</th>
     <th>PRICE</th>
     </tr>
 
     <tr>
-    <td>M10</td>
-    <td>3 GB</td>
-    <td>32 GB</td>
-    <td>8999</td>
+    <td>RC 125</td>
+    <td>14.5 HP @ 9250 rpm </td>
+    <td>37</td>
+    <td>160050</td>
     </tr>
 
     
     <tr>
-    <td>M20</td>
-    <td>4 GB</td>
-    <td>64 GB</td>
-    <td>14999</td>
+    <td>RC 200</td>
+    <td> 25 HP @ 10000 rpm </td>
+    <td>29</td>
+    <td>260000</td>
     </tr>
 
     <tr>
-    <td>M31</td>
-    <td>6 GB</td>
-    <td>128 GB</td>
-    <td>21999</td>
+    <td>DUKE 200</td>
+    <td> 25bhp at 10,000rpm </td>
+    <td>34</td>
+    <td>222000</td>
     </tr>
 
     <tr>
-    <td>M51</td>
-    <td>8 GB</td>
-    <td>256 GB</td>
-    <td>25699</td>
+    <td>DUKE 390</td>
+    <td> 43.5 PS @ 9000 rpm </td>
+    <td>21</td>
+    <td>3450000</td>
     </tr>
 
     </table>
