--- a/visit.html
+++ b/visit.html
@@ -14,7 +14,7 @@
     <li>Kozhikode</li>
     <li>Eranakulam</li>
     </ul>
-    <h2>Contact Number</h2>
-    <i><b>7636388929,9837736267</b></i>
+    <h2>Ph Number</h2>
+    <i><b>9383333889,9977377722</b></i>
 </body>
 </html>
