--- a/register.html
+++ b/register.html
@@ -17,8 +17,8 @@
 
 
      <input type="email" placeholder="Your email address" /> <br /> <br />
-     <input type="password" placeholder=" Samsung password" /> 
-     <input type="password" placeholder="Confirm Samsung password" /> <br /> <br />
+     <input type="password" placeholder="  password" /> 
+     <input type="password" placeholder="Confirm password" /> <br /> <br />
      
      
      <input type="submit" value="Register" />
