--- a/upcoming.html
+++ b/upcoming.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <title>Registration Form</title>
+   <title>KTM INDIA</title>
  </head>
 <body>
        <h1><i><b><u>  Upcoming Samsung Mobiles </i></b></u>  </h1>
