--- a/upcoming.html
+++ b/upcoming.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <title>KTM INDIA</title>
+   <title> ABOUT KTM INDIA</title>
  </head>
 <body>
        <h1><i><b><u>  Upcoming Samsung Mobiles </i></b></u>  </h1>
-       <h3> Upcoming Samsung Mobile Phones in India 2021 with expected prices, launch date, specifications</h3> 
-       Samsung S10 Plus and Samsung NOTE10  are the upcoming Samsung smartphones in India.</br>
+         KTM AG (<i>formerly KTM Sportmotorcycle AG[4][5]</i>) is an Austrian motorcycle
+         and sports car manufacturer owned by Pierer Mobility AG and Indian manufacturer 
+         <b>Bajaj Auto<\b>. It was formed in 1992 but traces its foundation to as early as 1934.
+          Today, KTM AG is the parent company of the KTM Group, consisting of a number of 
+          motorcycle brands.  </br>
        <img src="Collage.jpg" width="50%" /> </br>
-      These 2 smartphones will launch in 28 September 2021 in India.
-      <h2>price</h2>
-      <ol>
-      <li>expecting price of S10 is 77999</li>
-      <li>expecting price of NOTE 10 is 99999 </li>
-      </ol>
+      
 </body>
 </html>
