--- a/upcoming.html
+++ b/upcoming.html
@@ -7,7 +7,7 @@
        <h1><i><b><u>  Upcoming Samsung Mobiles </i></b></u>  </h1>
          KTM AG (<i>formerly KTM Sportmotorcycle AG[4][5]</i>) is an Austrian motorcycle
          and sports car manufacturer owned by Pierer Mobility AG and Indian manufacturer 
-         <b>Bajaj Auto<\b>. It was formed in 1992 but traces its foundation to as early as 1934.
+         <b>Bajaj Auto</b>. It was formed in 1992 but traces its foundation to as early as 1934.
           Today, KTM AG is the parent company of the KTM Group, consisting of a number of 
           motorcycle brands.  </br>
        <img src="Collage.jpg" width="50%" /> </br>
