--- a/upcoming.html
+++ b/upcoming.html
@@ -4,7 +4,7 @@
    <title> ABOUT KTM INDIA</title>
  </head>
 <body>
-       <h1><i><b><u>  Upcoming Samsung Mobiles </i></b></u>  </h1>
+       <h1><i><b><u>ABOUT KTM BIKES INDIA </i></b></u>  </h1>
          KTM AG (<i>formerly KTM Sportmotorcycle AG[4][5]</i>) is an Austrian motorcycle
          and sports car manufacturer owned by Pierer Mobility AG and Indian manufacturer 
          <b>Bajaj Auto</b>. It was formed in 1992 but traces its foundation to as early as 1934.
