--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </tr>
 
     </table>
-    <a href="register.html">Book now
+    <a href="register.html">Book a test drive now!!
 </a>
     
 </body>
