--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
    <title>MARUTHI SUZUKI</title>
  </head>
 <body>
-    <img src="marlogo.png" width="90" style="float:right" />
+    <img src="logo.png" width="90" style="float:right" />
     <h1>MARUTHI SUZUKI</h1>
    
-    <img src="marmain.png" width="500"/> </br>
+    <img src="mar
+.png" width="500"/> </br>
     <a href="visit.html">Discover</a>
     <h3>Best selling cars</h3>
   
