--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <title>MARUTHI SUZUKI</title>
  </head>
 <body>
-    <img src="logo.png" width="90" style="float:right" />
+    <img src="logo.png" width="90" style="float:left" />
     <h1>MARUTHI SUZUKI</h1>
    
     <img src="mar
