--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <img src="logo.png" width="90" style="float:left" />
     <h1>MARUTHI SUZUKI</h1>
    
-    <img src="mar
-.png" width="500"/> </br>
-    <a href="visit.html">Discover</a>
+    <img src="mar.png" width="500"/> </br>
+   
     <h3>Best selling cars</h3>
   
     <ol type="a">
@@ -22,7 +21,8 @@
     </ol>
     
    <a href="upcoming.html">KTM WORLD</a>
-
+   
+   <a href="visit.html">More from us</a>
 
    
    <!DOCTYPE html>
