--- a/visit.html
+++ b/visit.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <title>KTM INDIA</title>
+   <title> MARUTHI SUZUKI INDIA</title>
  </head>
 <body>
-    <h1>  KTM 390 ADVENTURE  </h1>
-    <h4> MORE ADVENTURE AWAITS YOU </h4>
-    <img src="Avd390.png" width="70%" />
-    <h2>showroomsin Kerala</h2>
-    <ul>
-    <li>kasaragod</li>
-    <li>Kannur</li>
-    <li>Kozhikode</li>
-    <li>Eranakulam</li>
-    </ul>
-    <h2>Ph Number</h2>
-    <i><b>9383333889,9977377722</b></i>
+    <h1>  Maruti Suzuki Finance  </h1>
+    <h4>  The Simplest Way to Finance Your Car </h4>
+    <img src="mar1.png" width="50%" />
+  
 </body>
 </html>
