--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li> MARUTHI SUZUKI CELEREO </li>
     </ol>
     
-   <a href="upcoming.html">KTM WORLD</a>
+   <a href="upcoming.html">sales</a>  </br>
    
    <a href="visit.html">More from us</a>
 
