--- a/upcoming.html
+++ b/upcoming.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <title> ABOUT KTM INDIA</title>
+   <title>   MARUTHI SUZUKI</title>
  </head>
 <body>
-       <h1><i><b><u>ABOUT KTM BIKES INDIA </i></b></u>  </h1>
-         KTM AG (<i>formerly KTM Sportmotorcycle AG[4][5]</i>) is an Austrian motorcycle
-         and sports car manufacturer owned by Pierer Mobility AG and Indian manufacturer 
-         <b>Bajaj Auto</b>. It was formed in 1992 but traces its foundation to as early as 1934.
-          Today, KTM AG is the parent company of the KTM Group, consisting of a number of 
-          motorcycle brands.  </br>
-       <img src="Collage.jpg" width="70%" /> </br>
-      
+       <h1><i><b><u>MARUTHI SUZUKI ARENA </i></b></u>  </h1>
+         Introducing a surprisingly easy way of bringing <b>home a car</b>.
+         Simply choose a car for a preferred tenure and drive ahead 
+         to enjoy for an all-inclusive monthly fee which takes care of 
+         your <i>maintenance</i> and insurance cost also.
+
+
+
 </body>
 </html>
